# Emotion2Emoji

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  inference_image.py  model.py  train.py
